--- a/styles/main.css
+++ b/styles/main.css
@@ -4,13 +4,15 @@ body {
 	background-color: rgb(30, 30, 30);
 }
 /*Settings for game container*/
-/*Size is iPad screen, margins set to place in middle of screen*/
 #game {
 	position: absolute;
+
+	/*For screens bigger than iPad*/
 	left: 50%;
 	margin-left: -512px;
 	top: 50%;
 	margin-top: -384px;
+
 	width: 1024px;
 	height: 768px;
 	/*Font and color temporary*/
@@ -18,6 +20,7 @@ body {
 	color: rgb(77, 58, 28);
 	background-color: rgb(240, 235, 213);
 }
+
 /*Settings for individual screens*/
 /*All screens hidden by default*/
 #game .screen {
@@ -37,6 +40,9 @@ body {
 #splash-screen .continue {
 	cursor: pointer;
 	font-size: 70px;
+}
+#install-screen {
+	text-align: center;
 }
 #main-menu {
 	background-image: url('../images/main-menu.jpg');
