--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,13 @@
-/*Remove any automatic margins*/
 body {
+	/*Remove any automatic margins*/
 	margin: 0;
 	background-color: rgb(30, 30, 30);
+
+	/*Disable touch highlights and auto-scaling*/
+	-webkit-touch-callout: none;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	-webkit-text-size-adjust: none;
+	-webkit-user-select: none;
 }
 /*Settings for game container*/
 #game {
@@ -14,7 +20,7 @@ body {
 	margin-top: -384px;
 
 	width: 1024px;
-	height: 768px;
+	height: 748px;
 	/*Font and color temporary*/
 	font-family: Roboto;
 	color: rgb(77, 58, 28);
